--- a/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
@@ -11,17 +11,17 @@
 <!-- ko if: !loading() -->
 <!-- ko foreach: popupFeatures -->
 <!-- ko if: active -->
+<!-- ko if: displayname -->
 <div class="hover-feature-title-bar">
     {% block title %}
     <div style="display: flex;">
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('left')}" class="hover-feature-nav-left"><i class="fa fa-angle-left"></i></div>
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('right')}" class="hover-feature-nav-right"><i class="fa fa-angle-right"></i></div>
-        <!-- ko if: displayname -->
         <div class="hover-feature-title" data-bind="text: displayname"></div>
-        <!--/ko-->
     </div>
     {% endblock title %}
 </div>
+<!--/ko-->
 <div class="hover-feature-body">
     {% block body %}
     <div class="hover-feature" data-bind="style: {'-webkit-line-clamp': showAll() ? '12' : '4', 'overflow-y': showAll() ? 'scroll' : 'hidden'}, html: map_popup"></div>
@@ -50,12 +50,12 @@
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
-        <!-- ko if: resourceinstanceid -->
+        <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
             window.open(reportURL + ko.unwrap(resourceinstanceid));
         }" href="javascript:void(0)">
             <i class="ion-document-text"></i>
-            <span>{% trans "Site Record" %}</span>
+            <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
         <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
