--- a/src/bcrhp/bcrhp/templates/views/components/search/search-results.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/search/search-results.htm
@@ -8,24 +8,47 @@
 
     <div class="search-listing" role="listitem" data-bind="event: { mouseover: mouseoverInstance, mouseout: mouseoverInstance('')}, css: {'selected': selected()}">
         <div style="display: flex">
+            <div class="search-thumbnail-container">
+                <div
+                    style="display: flex; align-items: center; margin: 10px; background-color: lightgrey;"
+                    data-bind="
+                        visible: thumbnail,
+                        event: {
+                            mouseover: mouseoverThumbnail,
+                            mouseout: mouseoutThumbnail,
+                        }
+                    "
+                >
+                    <img class="search-thumbnail-image" data-bind="attr:{src: thumbnail}" alt="">
+                </div>
+                <img class="search-hover-image" data-bind="attr:{src: thumbnail}" alt="">
+            </div>
             <div style="flex: 1">
                 <p
                     class="search-listing-title"
                     data-bind="css: {'i18n-alt': $parent.alternativelanguage}"
                 >
-                    <a class="search-candidate-title" href="#" data-bind="onEnterkeyClick, onSpaceClick, click: $parent.viewReport.bind($parent),
+                    <!--ko if: canEdit -->
+                    <a class="search-candidate-title" href="#" data-bind="onEnterkeyClick, onSpaceClick,
+                        click:  $parent.viewReport.bind($parent),
                         attr: {'aria-label': $root.translations.viewResourceReport(displayname)},
                     ">
                         <i class="search-listing-icon" data-bind="css: iconclass"></i>
                         <span data-bind="html: displayname"></span>
                     </a>
+                    <!--/ko-->
+                    <!--ko if: !canEdit -->
+                    <span class="search-candidate-title" data-bind="attr: {'aria-label': $root.translations.viewResourceReport(displayname)}">
+                        <i class="search-listing-icon" data-bind="css: iconclass"></i>
+                        <span data-bind="html: displayname"></span>
+                    </span>
+                    <!--/ko-->
                 </p>
 
                 <div class="search-listing-body" data-bind="html: displaydescription">
 
                 </div>
             </div>
-            <div style="display: flex; align-items: center; margin: 10px;" data-bind="visible: thumbnail"><img style="max-width: 60px;" data-bind="attr:{src: thumbnail}"></div>
         </div>
         <div class="search-listing-footer">
             <div style="flex-grow: 1;">
